--- a/demo/package.json
+++ b/demo/package.json
@@ -6,12 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "all": "^0.0.0",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "dom": "^0.0.3",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.19.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.0.8",
