--- a/demo/package.json
+++ b/demo/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-datepicker": "^4.19.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.16.0",
