--- a/demo/package.json
+++ b/demo/package.json
@@ -9,12 +9,14 @@
     "all": "^0.0.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "chart.js": "^3.9.1",
     "date-fns": "^2.30.0",
     "dom": "^0.0.3",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.19.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.16.0",
